YES-109 Fixed long words overflowing out of the container
- changed overflow-wrap properties

--- a/front-end/src/components/theZone/TheZonePost.css
+++ b/front-end/src/components/theZone/TheZonePost.css
@@ -9,7 +9,9 @@
   width: calc(100% - 10px);
   margin: 2px;
 }
-
+p {
+  overflow-wrap: break-word;
+}
 .post {
   border: 1px solid black;
   margin: 5px;
